fix(auth): specify charset for URL encoding
明确指定URLEncoder使用StandardCharsets.UTF_8替代隐式编码，避免平台默认字符集带来的兼容性问题